# gradpath-ai-advisor

./: .env.example  .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  RELEASE_NOTES.md  agent.py  gradpath_presentation.html  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
agents/: __init__.py  greeting_agent.py  planner_agent.py
backend/app/: config.py  models.py
backend/app/routers/: chat.py
backend/app/services/: adk_service.py  agent_adapter.py  transcript_parser.py
data/catalogs/: catalog_2026.json  extracted_majors.json  major_requirements.json
data/eval/: eval_cases.json
data/registry/: student_index.json
data/schedules/: fall_2026.json  spring_2026.json  summer_2026_gc.json  summer_2026_ol.json
data/transcripts/: student_0461817.json  student_0474352.json  student_0479986.json  student_0482879.json  student_0498908.json  student_0504145.json  student_s1001.json  student_s1002.json  student_s1010.json
frontend/src/: App.tsx  styles.css
frontend/src/components/: ChatPanel.tsx  DashboardPanel.tsx
scripts/: evaluate.py  extract_majors.py  parse_all.py  run_gradpath_ui.py
src/backend/: __init__.py
src/frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo
tests/: conftest.py  test_e2e.py  test_guardrails.py  test_integration.py  test_performance.py  test_transcript_parser.py  test_transcript_tools.py
tools/: __init__.py  catalog_tools.py  planning_tools.py  schedule_tools.py  student_tools.py  transcript_parser.py  transcript_schema.py  transcript_tools.py
(+30 files in other folders)
