[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gradpath"
version = "0.7.0"
description = "AI-powered academic advising agent for Lincoln University students"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "GradPath Team" }
]
keywords = ["academic-advising", "ai-agent", "google-adk", "graduation-planning", "lincoln-university"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "pydantic>=2.8,<3.0",
    "pdfplumber>=0.11,<1.0",
    "pypdf>=5.0,<6.0",
    "python-dotenv>=1.0,<2.0",
    "google-adk>=0.5.0",
]

[project.scripts]
gradpath = "run_gradpath_ui:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "tools*", "backend*"]
